# reclaim-feed

./: .gitignore  CLOUD_DEPLOYMENT.md  CLOUD_DEPLOYMENT_GUIDE.md  Dockerfile  FEATURE_STATUS.md  FRONTEND_FEATURES.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  deploy-to-ai-builder.py  implementation_plan.md
backend/: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/config/: config.example.yaml
backend/config/prompts/: extraction.md  tags.json
backend/config/prompts/history/extraction/: v1.meta.json  v2.meta.json  v3.meta.json  v4.meta.json  v5.meta.json  v6.md  v6.meta.json
backend/config/prompts/history/scoring/: v1.md  v1.meta.json  v10.meta.json  v2.meta.json  v3.meta.json  v4.meta.json  v5.meta.json  v6.meta.json  v7.meta.json  v8.md  v8.meta.json  v9.meta.json
backend/docs/testing/: README.md  backend-tests.md  coverage-report.md  test-cases.json
backend/src/: __init__.py  cli.py  config.py  models.py  pipeline.py
backend/src/api/: __init__.py  deps.py  main.py
backend/src/fetchers/: __init__.py  base.py  rss.py  twitter.py  wechat.py
backend/src/outputs/: __init__.py  obsidian.py  store.py
backend/src/processors/: __init__.py  analyzer.py  quality_filter.py
backend/src/utils/: __init__.py  prompt_manager.py
backend/tests/: conftest.py  test_analyzer.py  test_api.py  test_cli.py  test_feed_api.py  test_fetchers.py  test_integration.py  test_models.py  test_obsidian.py  test_quality_filter.py  test_settings_api.py  test_sources_api.py  test_utils.py
docs/: deploy_docker.md  dev_backend.md  (+1 more)
(+49 files in other folders)
